# JavaCompiler

./: .gitignore  CMakeLists.txt  README.md  driver.cpp  driver.hpp  main.cpp  mini-java  parser.hpp  parser.y  run_all_test.sh  scanner.hpp  scanner.l
Bases/: BaseElement.h
Expressions/: AllocExpression.cpp  AllocExpression.h  Expression.h  FieldInvokeExpression.cpp  FieldInvokeExpression.h  IdentExpression.cpp  IdentExpression.h  IndexExpression.cpp  IndexExpression.h  LengthExpression.cpp  LengthExpression.h  ThisExpression.cpp  ThisExpression.h
Expressions/BinaryExpression/: BinaryExpression.cpp  BinaryExpression.h  EqualExpression.cpp  EqualExpression.h
Expressions/BinaryExpression/ArithmeticExpressions/: AddExpression.cpp  AddExpression.h  ArithmeticExpression.cpp  ArithmeticExpression.h  DivExpression.cpp  DivExpression.h  ModExpression.cpp  ModExpression.h  MulExpression.cpp  MulExpression.h  SubExpression.cpp  SubExpression.h
Expressions/BinaryExpression/ComparisonExpressions/: ComparisonExpression.cpp  ComparisonExpression.h  GreaterExpression.cpp  GreaterExpression.h  LessExpression.cpp  LessExpression.h
Expressions/BinaryExpression/LogicalExpression/: LogicalAndExpression.cpp  LogicalAndExpression.h  LogicalExpression.cpp  LogicalExpression.h  LogicalOrExpression.cpp  LogicalOrExpression.h
Expressions/ConstantExpression/: FalseExpression.cpp  FalseExpression.h  NumExpression.cpp  NumExpression.h  TrueExpression.cpp  TrueExpression.h
Expressions/UnaryExpression/: NotExpression.cpp  NotExpression.h
Objects/: Bool.cpp  Bool.h  Int.cpp  Int.h  Object.h
Statements/: Assert.cpp  Assert.h  ClassDeclaration.cpp  ClassDeclaration.h  ClassDeclarationList.cpp  ClassDeclarationList.h  DeclarationList.cpp  DeclarationList.h  ExpressionList.cpp  ExpressionList.h  FieldDeclaration.cpp  FieldDeclaration.h  Formal.cpp  Formal.h  FormalsList.cpp  FormalsList.h  IfElse.cpp  IfElse.h  LocalVarDeclaration.cpp  LocalVarDeclaration.h  MainClass.cpp  MainClass.h  MethodDeclaration.cpp  MethodDeclaration.h  MethodInvocation.cpp  MethodInvocation.h  Print.cpp  Print.h  Program.cpp  Program.h  Return.cpp  Return.h  ScopeBlock.cpp  ScopeBlock.h  Statement.cpp  Statement.h  StatementList.cpp  StatementList.h  VarAssignment.cpp  VarAssignment.h  (+4 more)
SymbolTable/: ScopeLayer.cpp  ScopeLayer.h  ScopeLayerTree.cpp  ScopeLayerTree.h
Symbols/: BaseSymbol.cpp  BaseSymbol.h  PhysicalVariable.cpp  PhysicalVariable.h  STArgument.cpp  STArgument.h  STClass.cpp  STClass.h  STMethod.cpp  STMethod.h  STVariable.cpp  STVariable.h  Type.cpp  Type.h
Visitors/: Elements.h  ExecuteVisitor.cpp  ExecuteVisitor.h  ForwardDeclaration.h  InterpreterVisitor.cpp  InterpreterVisitor.h  PrintVisitor.cpp  PrintVisitor.h  SymbolTreeVisitor.cpp  SymbolTreeVisitor.h  Visitor.h
doc/: JavaCompilerArticle.docx
graphviz/: full_dependencies.dot
tests/invalid_tests/: array_index_wrong_type.minijava  array_initializer_size_not_int.minijava  binary_operator_on_incompatible_types.minijava  illegal_identifier_start.minijava  invalid_if_condition.minijava  missing_array_dimension.minijava  missing_main.minijava  missing_semicolon.minijava  while_condition_not_boolean.minijava  wrong_method_declaration_order.minijava
tests/valid_tests/: arithmetic.minijava  arrays.minijava  comparisons.minijava  factorial.minijava  ifelse.minijava  logical.minijava  nested.minijava  objects.minijava  types.minijava  while.minijava
